Fix jump add text when active.

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -128,7 +128,7 @@ a:hover { color: #4096EE; }
 	text-decoration: none;
 }
 
-.carbon-poweredby, .carbon-text:active {
+.carbon-poweredby {
 	bottom: 15px;
 	color: #666 !important;
 	display: block;
